--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script type="module" defer src="/public/components/login/login.js"></script>
     <script type="module" defer src="/public/components/menu/menu.js"></script>
     <script type="module" defer src="/public/components/slider/slider.js"></script>
+    <script language="javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
   </head>
   <body>
     <!-- =========== START: HEADER =========== -->
